# ffts

./: README.md
rust/ffts-rs/: Cargo.toml
rust/ffts-rs/src/: complex.rs  lib.rs
rust/ffts-sys/: Cargo.toml  build.rs  wrapper.h
rust/ffts-sys/src/: lib.rs
src/: ffts.c  ffts_internal.h
tests/: test.c
