[package]
name = "ffts"
version = "0.1.3"
authors = ["Sevag Hanssian <sevag.hanssian@gmail.com>"]
edition = "2018"
repository = "https://github.com/sevagh/ffts"
readme = "../../README.md"
keywords = ["signal", "fft", "dsp"]
description = "Rust binding for ffts (The Fastest Fourier Transform in the South)"
documentation = "http://docs.rs/ffts/"
license-file = "../../COPYRIGHT"

[dependencies]
ffts-sys = "0.1.3"
libc = "0.2.55"
